--- a/education.html
+++ b/education.html
@@ -41,7 +41,7 @@
           </div>
           <div class="container right">
             <div class="content">
-              <h2>Oktober 2023</h2>
+              <h2>October 2023</h2>
               <p>Starting my Masters in Biomedical Engineering at TU Darmstadt, Expected to finish in 2025</p>
             </div>
           </div>
