improvements to existing code added work experience and some projects
Signed-off-by: Konstantin Preusser <konstantin.preusser@gmx.de>

--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
     <main>
         <div class="aboutSection">
             <h1>About Me:</h1>
-            Hi I'm Konstantin Preußer. A computer and biomedical engineer from Germany.<br> I'm currently getting my masters in biomedical engineering at the Technical University Darmstadt.<br>
+            Hi I'm Konstantin Preußer. I'm 23 years old and a computer and biomedical engineer from Germany.<br> I'm currently studying biomedical engineering in my masters at the Technical University Darmstadt.<br>
             <h2>Academic Interests:</h2>
             <ul1>
                 <li>Robotics</li>
