--- a/work.html
+++ b/work.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Work Experience</title>
+    <link rel="stylesheet" href="workStyles.css">
 </head>
 <body>
     <header>
@@ -17,5 +17,24 @@
             </ul>
         </nav>
     </header>
+
+    <section class="work-experience">
+        <div class="work-entry">
+            <h2>Research Assistant, TU Darmstadt EINS (Software Delevopment / Energy Science)</h2>
+            <p class="date">Feb. 2022 - June 2023</p>
+            <p class="description">Developed and implemented a software tool to assist distribution system operators in planning and implementing control and communication schemes for smart power grids.</p>
+            <p class="technologies">Matlab, Python, GUROBI, Javascript, ElectronJS, ReactJS</p>
+            <a href="referenceLetters/Reference_Letter_HiWi_Konstantin_Preusser.pdf" class="btn" target="_blank">Open Reference Letter</a>
+  </div>
+        </div>
+
+        <div class="work-entry">
+            <h2>Tutorings at the Computer Science and Electrical Engineering Departments, TU Darmstadt</h2>
+            <p class="date">April 2021 - March 2022</p>
+            <p class="description">Held tutoring and exercise courses for fundamental Computer Science and Energy Science modules. The classes were focussing on programming in JAVA with Eclipse.</p>
+        </div>
+
+        <!-- Add more work entries as needed -->
+    </section>
 </body>
 </html>
