--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="projectsStyles.css">
 </head>
 <body>
     <header>
@@ -17,5 +17,37 @@
             </ul>
         </nav>
     </header>
+
+    <section class="projects">
+        <div class="project-entry">
+            <h2>Portfolio Website</h2>
+            <p class="date">August 2023</p>
+            <p class="description">Designed and programmed my own website.</p>
+            <p class="technologies">Javascript,CSS,HTML</p>
+            <a href="https://github.com/1Preusse/meine-Website" class="github-btn" target="_blank">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32.58 31.77" class="github-logo">
+                  <path d="M16.29,0a16.29,16.29,0,0,0-5.14,31.74c.81.15,1.1-.35,1.1-.78s0-1.54,0-3c-4.52.98-5.47-2.18-5.47-2.18A4.3,4.3,0,0,0,5.67,24c-1.47-1,.12-1,.12-1a3.41,3.41,0,0,1,2.5,1.68A3.46,3.46,0,0,0,14,27.69a3.49,3.49,0,0,1,1-2.18c-3.49-.39-7.17-1.75-7.17-7.79A6.11,6.11,0,0,1,9.2,13.19a5.7,5.7,0,0,1,.16-4.16s1.32-.42,4.33,1.61a15,15,0,0,1,7.88,0c3-2,4.33-1.61,4.33-1.61a5.63,5.63,0,0,1,.16,4.16,6.11,6.11,0,0,1,1.58,4.25c0,6.06-3.69,7.39-7.19,7.77a3.68,3.68,0,0,1,1.1,2.85c0,2.06,0,3.71,0,4.22s.29.93,1.1.78A16.29,16.29,0,0,0,16.29,0Z" fill="#000000" />
+                </svg>
+                GitHub Repository
+              </a>
+  </div>
+        </div>
+
+        <div class="project-entry">
+            <h2>Music Generator App</h2>
+            <p class="date">Oct. 2022 - Present</p>
+            <p class="description">Since 2022 me and a friend are programming a music generator. The App is supposed to generate random music.</p>
+            <p class="technologies">Python</p>
+            <a href="https://github.com/1Preusse/KPJPMusicGenerator" class="github-btn" target="_blank">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32.58 31.77" class="github-logo">
+                  <path d="M16.29,0a16.29,16.29,0,0,0-5.14,31.74c.81.15,1.1-.35,1.1-.78s0-1.54,0-3c-4.52.98-5.47-2.18-5.47-2.18A4.3,4.3,0,0,0,5.67,24c-1.47-1,.12-1,.12-1a3.41,3.41,0,0,1,2.5,1.68A3.46,3.46,0,0,0,14,27.69a3.49,3.49,0,0,1,1-2.18c-3.49-.39-7.17-1.75-7.17-7.79A6.11,6.11,0,0,1,9.2,13.19a5.7,5.7,0,0,1,.16-4.16s1.32-.42,4.33,1.61a15,15,0,0,1,7.88,0c3-2,4.33-1.61,4.33-1.61a5.63,5.63,0,0,1,.16,4.16,6.11,6.11,0,0,1,1.58,4.25c0,6.06-3.69,7.39-7.19,7.77a3.68,3.68,0,0,1,1.1,2.85c0,2.06,0,3.71,0,4.22s.29.93,1.1.78A16.29,16.29,0,0,0,16.29,0Z" fill="#000000" />
+                </svg>
+                GitHub Repository
+              </a>
+        </div>
+
+        <!-- Add more work entries as needed -->
+    </section>
+
 </body>
 </html>
