--- a/assets/work.html
+++ b/assets/work.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Work Experience</title>
-    <link rel="stylesheet" href="workStyles.css">
+    <link rel="stylesheet" href="css/workStyles.css">
 </head>
 <body>
     <header>
@@ -19,6 +19,12 @@
     </header>
 
     <section class="work-experience">
+        <div class="work-entry">
+            <h2>Research Assistant, TU Darmstadt EINS (Data Engineering / Energy Science)</h2>
+            <p class="date">Oct. 2023 - Present</p>
+            <p class="description">Using public data to build graphs and analyze the french energy grids</p>
+            <p class="technologies">Python, MySQL, PostgresQL</p>
+  </div>
         <div class="work-entry">
             <h2>Research Assistant, TU Darmstadt EINS (Software Delevopment / Energy Science)</h2>
             <p class="date">Feb. 2022 - June 2023</p>
