--- a/assets/about.html
+++ b/assets/about.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <style>
         body {
-            background-image: url("Image/DSC01831.JPG");
+            background-image: url("../Image/DSC01831.JPG");
             background-size: cover; /* Adjust the image size to cover the whole background */
             
         }
