--- a/assets/projects.html
+++ b/assets/projects.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
-    <link rel="stylesheet" href="projectsStyles.css">
+    <link rel="stylesheet" href="css/projectsStyles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body>
     <header>
@@ -19,9 +20,21 @@
     </header>
 
     <section class="projects">
+
+        <div class="project-entry">
+            <h2>Travel Sharing Website</h2>
+            <p class="date">Oct. 2023 - present</p>
+            <p class="description">I'm currently building a website that allows users to share their travel experience and give much detail to costs and venues.</p>
+            <p class="technologies">Javascript,CSS,HTML, MySQL, Python</p>
+            <a href="https://travellikeme.org/" class="github-btn" target="_blank">
+                <i class="material-icons">computer</i>
+                Travellikeme.org
+              </a>
+  </div>
+
         <div class="project-entry">
             <h2>Portfolio Website</h2>
-            <p class="date">August 2023</p>
+            <p class="date">August 2023 (updates twice a year)</p>
             <p class="description">Designed and programmed my own website.</p>
             <p class="technologies">Javascript,CSS,HTML</p>
             <a href="https://github.com/1Preusse/meine-Website" class="github-btn" target="_blank">
